frontend/src/styles/RecipeDetail.css
@import "../styles/common.css";

:root {
  --pressedButton: #b06666;
  --nav: #C0E1D2;
}

.detail-page-content {
  position: relative;
  width: 80%;
  justify-self: center;
  margin-bottom: 2rem;
  max-width: 1200px;
}

.star-container {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.additional-info {
  font-weight: bold;
  color: black;
  font-size: 1.25rem;
}

.header-icon {
  width: 2rem;
  height: 2rem;
}

.recipe-header {
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
  justify-items: center;
  border: solid 2px var(--border);
  padding: 1rem;
  margin: 1rem 0;
  border-radius: 1rem;
}

.recipe-header-info {
  display: grid;
  grid-template-rows: 3fr 1fr 2fr;
  align-items: center;
  justify-items: start;
}

.header-image {
  width: 50%;
  border-radius: 0.5rem;
  border: 1px solid var(--border);
  aspect-ratio: 1;
}

.detail-header-row {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 1rem;
}

.tag {
  color: white;
  background-color: var(--Button);
  border-radius: 1rem;
  padding: 0.25rem 0.5rem;
}

.detail-page {
  display: flex;
  align-items: flex-start;
  gap: 2rem;
  width: 100%;
}

.scroll-info {
  display: flex;
  flex-direction: column;
  width: 70%;
}

.section-title {
  font-weight: bold;
  font-size: 1.5rem;
  padding-left: 1rem;
  margin-top: 1rem;
}

.grid-square {
  display: flex;
  flex-direction: column;
}

.ingredients-container {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  width: 100%;
  height: fit-content;
  background-color: var(--Background);
  border-radius: 30px;
  border: 1px solid #757575;
  padding: 1rem 1rem 1rem 2rem;
  box-sizing: border-box;
  margin: 1rem 0 0 0;
  list-style-type: decimal;
}

.message-scroll {
  overflow-y: auto;
  max-height: 18.5rem;
}

.message-scroll::-webkit-scrollbar {
  display: none;
}

.similar-recipe-container {
  width: 100%;
  flex-grow: 1;
  background-color: var(--nav);
  border: 1px solid #757575;
  border-radius: 30px;
  min-height: 5rem;
  display: flex;
  flex-direction: column;
  padding: 1.5rem;
  box-sizing: border-box;
  overflow-y: auto;
  gap: 1rem;
}

.recipe-sidebar {
  position: sticky;
  right: 2rem;
  top: 2rem;
  width: 30%;
  display: flex;
  flex-direction: column;
  height: 80vh;
}

.discussion-container {
  width: 100%;
  height: 30rem;
  overflow-y: auto;
  border: 1px solid #757575;
  border-radius: 30px;
}

.icon-button {
  color: rgb(98, 98, 98);
  cursor: pointer;
}

.icon-button:hover {
  color: black;
}

.discussion-filter {
  max-width: 10rem;
  margin: 0.5rem 0.5rem 1rem 1rem;
  border-radius: 0.5rem;
  padding: 0.5rem;
  border: 1px solid var(--border);
}

.filter-label {
  margin-left: 1rem;
  font-size: 0.875rem;
  color: black;
}

.rating-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: start;
  /* width: 20rem; */
  height: 100%;
  background-color: var(--Background);
  /* border: 1px solid #757575; */
  padding: 1rem;
  border-radius: 30px;
  box-sizing: border-box;
  gap: 1rem;
}

.comment-form {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: start;
  width: 20rem;
  height: 100%;
  max-height: 100%;
  /* background-color: var(--Background); */
  border-radius: 30px;
  /* border: solid 1px #757575; */
  padding: 1rem;
  box-sizing: border-box;
  gap: 1rem;
}

.comment-container {
  display: "flex";
  flex-direction: "column";
  align-items: "start";
  width: "100%";
}

.helper-text {
  font-size: 0.875rem;
}

.comment-form-text {
  padding: 0.5rem;
  border-radius: 0.5rem;
  border: 1px solid #757575;
  font-family: inherit;
  resize: none;
  height: 4rem;
  width: 100%;
}


.comment {
  display: grid;
  grid-template-rows: 1.2fr 1fr auto 1.2fr;
  margin: 1rem 2rem;
  padding-bottom: 0.5rem;
  /* gap: 0.2rem; */
}

.reply-text {
  border: 1px solid var(--border);
  padding: 1rem;
  border-radius: 0.5rem;
  width: 100%;
  /* min-height: 3rem; */
  
}

.reply-container {
  display: flex;
  flex-direction: column;
  align-items: start;
  margin: 1rem 2rem;
  gap: 1rem;
}

.replies {
  margin-left: 4rem;
  position: relative;
}

.replies::before {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  left: -1rem;
  width: 1px;
  background-color: #757575;
}

.replies .comment::before, .reply-container::before {
  content: "";
  position: absolute;
  top: 1rem;
  left: -1rem;
  width: 1rem;
  height: 1px;
  background-color: #757575;
}

.comment-content {
  background-color: var(--Cards);
  border-radius: 1rem;
  padding: 1rem;
  margin-bottom: 1rem;
}

.comment-footer {
  display: flex;
  gap: 1rem;
  align-items: center;
}

.step {
  font-size: 1.25rem;
  padding-left: 1rem;
  margin: 0 1rem;
}

.step-image {
  max-height: 20rem;
  width: auto;
  border-radius: 1rem;
}

.step-image-container {
  display: flex;
  width: 100%;
  justify-content: center;
}

.step::marker {
  font-weight: bold;
}

.feedback-container {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  height: fit-content;
  background-color: var(--Background);
  border: 1px solid #757575;
  border-radius: 30px;
  justify-content: space-around;
  padding: 1rem;
  box-sizing: border-box;
}

.reply-button {
  display: flex;
  background-color: var(--Button);
  color: white;
  font-size: 1rem;
  align-items: center;
  padding: 0.25rem;
  border-radius: 1rem;
  gap: 0.25rem;
  border: 0px solid transparent;
}

.cancel-button {
  display: flex;
  background-color: white;
  font-size: 1rem;
  align-items: center;
  padding: 0.25rem;
  border-radius: 1rem;
  gap: 0.25rem;
  border: 1px solid var(--Button);
  cursor: pointer;
}

.submit-button {
  display: flex;
  background-color: var(--Button);
  color: white;
  font-size: 1rem;
  align-items: center;
  padding: 0.5rem;
  border-radius: 1rem;
  gap: 0.25rem;
  border: 0px solid transparent;
  cursor: pointer;
}

.exit-button {
  position: absolute;
  top: 1.5rem;
  right: 1.5rem;
  cursor: pointer;
}

.ai-button {
  position: fixed;
  bottom: 2rem; /* Distance from the bottom of the screen */
  right: 2rem;  /* Distance from the right side of the screen */
  z-index: 1000; /* Ensures it stays on top of other content */
  display: flex;
  border: 2px solid var(--Button);
  padding: 0.5rem;
  border-radius: 1rem;
  align-items: center;
  gap: 0.5rem;
  font-weight: bold;
  font-size: 1rem;
  cursor: pointer;
  background-color: white;
}

.submit-button:hover, .reply-button:hover {
  background-color: var(--pressedButton); 
}

.ai-button:hover {
  box-shadow: 0 0 1rem 0.5rem rgba(168, 164, 164, 0.3);
}

.cancel-button:hover {
  box-shadow: 0 0 1rem 0.1rem rgba(0,0,0,0.3);
}

.ingredient {
  display: flex;
  gap: 0.5rem;
  font-size: 1.25rem;
  align-items: center;
}

.crossed-out {
  text-decoration: line-through;
}

.error {
  border: 2px solid red !important;
}

.chat-popup {
  display: flex;
  flex-direction: column;
  position: fixed;
  box-shadow: 0 0 2rem 1rem rgba(0,0,0,0.3);
  bottom: 6rem;
  right: 2rem;
  width: 20rem;
  height: 25rem;
  background-color: white;
  /* border: 1px solid #757575; */
  border-radius: 2rem;
  overflow: auto;
}

.chat-popup-header {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--nav);
  width: 100%;
  height: 4rem;
}

.chat-header-title {
  position: sticky;
  font-size: 1.5rem;
  font-weight: bold;
  color: black;
}

.chat-searchbar {
  position: absolute;
  bottom:0.5rem;
  width: 80%;
  left: 50%;         /* Moves the left edge to the exact center */
  transform: translateX(-50%); /* Shifts element back by half its own width */
  height: 2rem;
  border: 1px solid #757575;
  border-radius: 1rem;
  padding: 0.2rem;
  padding-left: 0.5rem;
}

.message {
  position: relative;
  background-color: rgb(239, 237, 221);
  border: gray 1px solid;
  border-radius: 2rem;
  padding: 0.5rem;
  margin: 1rem 0 1rem 1rem;
  width: fit-content;
  overflow-wrap: break-word;
  max-width: 80%;
}

.user {
  position: relative;
  justify-self: flex-end;
  margin-right: 1rem;
  background-color: rgb(147, 199, 244);
}

.bot {
  justify-self: flex-start;
}

.message::after {
  position: absolute;
  bottom: 10px;
  width: 0;
  height: 0;
  border: 10px solid transparent;
}

.message.bot {
  border-bottom-left-radius: 2px;
}
.message.bot::after {
  left: -10px;
}
.message.user {
  border-bottom-right-radius: 2px;
}
.message.user::after {
  right: -10px;
}

.confirm-delete-form {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 0.2fr 5fr;
  gap: 1rem;
  place-items: center;
  justify-content: center;
  position: fixed; /* Takes the div out of the flow */
  top: 45%;         /* position in screen center */
  left: 50%; 
  transform: translate(-50%, -50%);       
  z-index: 3; /* this one overlays the background */
  height: 25rem;
  width: 25rem;
  border-radius: 10px;
  box-shadow: 2px 2px 12px 1px #d2d2d2;
  background-color: var(--card);
  color: var(--card-foreground);
  overflow: auto;
  box-shadow: 0 0 4rem 1rem rgba(0,0,0,0.5);
}

.exit-icon {
  position: absolute;
  top: 0;
  right: 0;
  padding: 10px;
  width: 3rem;
  height: 3rem;
  color: var(--muted-foreground);
  transition-duration: 0.4s;
  cursor: pointer;
}

.exit-icon:hover {
  color: var(--foreground);
}

